# HuffmanCoding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_coverage.sh  main.cpp
Huffman/: CMakeLists.txt  Common.h  Encoder.cpp  Encoder.h  HuffmanTree.cpp  HuffmanTree.h  TreeNode.cpp  TreeNode.h
Huffman/io/: FileUtils.cpp  FileUtils.h
Tests/: CMakeLists.txt
Tests/HuffmanTests/: BitStackTest.cpp  CMakeLists.txt  DecoderTest.cpp  EncoderTest.cpp  FileUtilsTest.cpp  HuffmanTreeTest.cpp  PriorityQueueTest.cpp  TestUtils.cpp  TestUtils.h  TreeNodeTest.cpp  VectorTest.cpp
app/: CMakeLists.txt  TimeResults.h  main.cpp
cmake/: CodeCoverage.cmake
common/: BitStack.cpp  BitStack.h  CMakeLists.txt  PriorityQueue.h  Vector.h  Vector.tcc  Vector.tpp
dokumentaatio/: Kayttoohje.md  Maarittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  luokkakaavio.txt
dokumentaatio/coverage/: index-sort-f.html  index-sort-l.html  index.html
dokumentaatio/coverage/common/: BitStack.cpp.func-sort-c.html  BitStack.cpp.func.html  BitStack.cpp.gcov.html  BitStack.h.func-sort-c.html  BitStack.h.func.html  BitStack.h.gcov.html  PriorityQueue.h.func-sort-c.html  PriorityQueue.h.func.html  PriorityQueue.h.gcov.html  Vector.h.func-sort-c.html  Vector.h.func.html  Vector.h.gcov.html  Vector.tcc.func-sort-c.html  Vector.tcc.func.html  Vector.tcc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
dokumentaatio/coverage/huffman/: Decoder.cpp.func-sort-c.html  Decoder.cpp.func.html  Decoder.cpp.gcov.html  Decoder.h.func-sort-c.html  Decoder.h.func.html  Decoder.h.gcov.html  Encoder.cpp.func-sort-c.html  Encoder.cpp.func.html  Encoder.cpp.gcov.html  Encoder.h.func-sort-c.html  Encoder.h.func.html  Encoder.h.gcov.html  HuffmanTree.cpp.func-sort-c.html  HuffmanTree.cpp.func.html  HuffmanTree.cpp.gcov.html  HuffmanTree.h.func-sort-c.html  HuffmanTree.h.func.html  HuffmanTree.h.gcov.html  TreeNode.cpp.func-sort-c.html  TreeNode.cpp.func.html  TreeNode.cpp.gcov.html  TreeNode.h.func-sort-c.html  TreeNode.h.func.html  TreeNode.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
dokumentaatio/coverage/huffman/io/: FileUtils.cpp.func-sort-c.html  FileUtils.cpp.func.html  FileUtils.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
dokumentaatio/doxygen/: config.txt
dokumentaatio/doxygen/html/: BitStack_8cpp.html  BitStack_8cpp__incl.map  BitStack_8cpp__incl.md5  BitStack_8cpp_source.html  BitStack_8h.html  BitStack_8h__dep__incl.map  BitStack_8h__dep__incl.md5  BitStack_8h__incl.map  BitStack_8h__incl.md5  BitStack_8h_source.html  Common_8h.html  Common_8h__dep__incl.map  Common_8h__dep__incl.md5  Common_8h__incl.md5  Common_8h_source.html  Decoder_8cpp.html  Decoder_8cpp__incl.map  Decoder_8cpp__incl.md5  Decoder_8cpp_source.html  Decoder_8h.html  Decoder_8h__dep__incl.map  Decoder_8h__dep__incl.md5  Decoder_8h__incl.map  Decoder_8h__incl.md5  Decoder_8h_source.html  Encoder_8cpp.html  Encoder_8cpp__incl.map  Encoder_8cpp__incl.md5  Encoder_8cpp_source.html  Encoder_8h.html  Encoder_8h__dep__incl.map  Encoder_8h__dep__incl.md5  Encoder_8h__incl.map  Encoder_8h__incl.md5  Encoder_8h_source.html  FileUtils_8cpp.html  FileUtils_8cpp__incl.map  FileUtils_8cpp__incl.md5  FileUtils_8cpp_source.html  FileUtils_8h.html  (+86 more)
dokumentaatio/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+15 more)
dokumentaatio/doxygen/latex/: BitStack_8cpp.tex  BitStack_8cpp__incl.md5  BitStack_8h.tex  BitStack_8h__dep__incl.md5  BitStack_8h__incl.md5  Common_8h.tex  Common_8h__dep__incl.md5  Common_8h__incl.md5  Decoder_8cpp.tex  Decoder_8cpp__incl.md5  Decoder_8h.tex  Decoder_8h__dep__incl.md5  Decoder_8h__incl.md5  Encoder_8cpp.tex  Encoder_8cpp__incl.md5  Encoder_8h.tex  Encoder_8h__dep__incl.md5  Encoder_8h__incl.md5  FileUtils_8cpp.tex  FileUtils_8cpp__incl.md5  FileUtils_8h.tex  FileUtils_8h__dep__incl.md5  FileUtils_8h__incl.md5  HuffmanTree_8cpp.tex  HuffmanTree_8cpp__incl.md5  HuffmanTree_8h.tex  HuffmanTree_8h__dep__incl.md5  HuffmanTree_8h__incl.md5  PriorityQueue_8h.tex  PriorityQueue_8h__dep__incl.md5  PriorityQueue_8h__incl.md5  TreeNode_8cpp.tex  TreeNode_8cpp__incl.md5  TreeNode_8h.tex  TreeNode_8h__dep__incl.md5  TreeNode_8h__incl.md5  Vector_8h.tex  Vector_8h__dep__incl.md5  Vector_8h__incl.md5  annotated.tex  (+23 more)
huffman/: CMakeLists.txt  Common.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  HuffmanTree.cpp  HuffmanTree.h  TreeNode.cpp  TreeNode.h
huffman/io/: FileUtils.cpp  FileUtils.h
